--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Style/style.css">
     <title>Accueil - Ohmyfood</title>
 </head>
-
+<body class="body">
                 <!--///// header /////-->
     <header class="header">
         <h1 class="header__logo">Ohmyfood</h1>
