--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,14 @@
     <title>Accueil - Ohmyfood</title>
 </head>
 <body class="body">
+        <!-- Chargements -->
+    <div class="loader">
+      <div class="loader__itemContainer">
+        <div class="loader__item loader__item--1"></div>
+        <div class="loader__item loader__item--2"></div>
+        <div class="loader__item loader__item--3"></div>
+      </div>
+    </div>
                 <!--///// header /////-->
     <header class="header">
         <h1 class="header__logo">Ohmyfood</h1>
