--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,7 @@
     <title>Accueil - Ohmyfood</title>
 </head>
 <body class="body">
+
         <!-- Chargements -->
     <div class="loader">
       <div class="loader__itemContainer">
@@ -22,6 +23,7 @@
         <div class="loader__item loader__item--3"></div>
       </div>
     </div>
+
                 <!--///// header /////-->
     <header class="header">
         <h1 class="header__logo">Ohmyfood</h1>
@@ -38,7 +40,7 @@
                 <label class="placeholder">Paris, Belleville</label>
             </form>
         </div>                
-                <!--///// En-tête /////-->
+                <!--///// En-tête + bouton /////-->
         <section class="hero">
             <h2 class="hero__title">Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
