--- a/À-la-francaise.html
+++ b/À-la-francaise.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="Image/png" sizes="16x16" href="images et textes/logo/omf-favicon.png">
         <!-- Style -->
         <link rel="stylesheet" href="Style/Style.css">
-        <title>Accueil - Ohmyfood</title>
+        <title>À la française  - Ohmyfood</title>
     </head>
 
     <body class="body">
