--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e9ad2cc302.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="Image" sizes="16x16" href="images et textes/logo/omf-favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/logo/omf-favicon.png">
     <!-- Style -->
     <link rel="stylesheet" href="Style/style.css">
     <title>Accueil - Ohmyfood</title>
@@ -78,7 +78,7 @@
                 <article class="restaurant__cards">
                     <a href="la-palette-du-goût.html">
                         <div class="restaurant__cards--img">
-                            <img src="images et textes/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" photo du plat, du restaurant la palette du goût">
+                            <img src="Assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=" photo du plat, du restaurant la palette du goût">
                             <div class="restaurant__cards--img--markerinfo">
                                 <p>Nouveau</p>
                             </div>
@@ -98,7 +98,7 @@
                 <article class="restaurant__cards">
                     <a href="la-note-enchantée.html">
                         <div class="restaurant__cards--img">
-                            <img src="images et textes/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du plat, du restaurant la note enchantés">
+                            <img src="Assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du plat, du restaurant la note enchantés">
                             <div class="restaurant__cards--img--markerinfo">
                                 <p>Nouveau</p>
                             </div>
@@ -118,7 +118,7 @@
                 <article class="restaurant__cards">
                     <a href="À-la-francaise.html">
                         <div class="restaurant__cards--img">
-                            <img src="images et textes/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du plat, du restaurant à la francaise">
+                            <img src="Assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du plat, du restaurant à la francaise">
                         </div>
                         <div class="restaurant__cards--info">
                             <div class="restaurant__cards--text">
@@ -135,7 +135,7 @@
                 <article class="restaurant__cards">
                     <a href="le-délice-des-sens.html">
                         <div class="restaurant__cards--img">
-                            <img src="images et textes/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du plat, du restaurant la délice des sens">
+                            <img src="Assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du plat, du restaurant la délice des sens">
                         </div>
                         <div class="restaurant__cards--info">
                             <div class="restaurant__cards--text">
