--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-        <link rel="icon" type="Image/png" sizes="16x16" href="images et textes/logo/omf-favicon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="Assets/logo/omf-favicon.png">
         <!-- Style -->
         <link rel="stylesheet" href="Style/Style.css">
         <title>La note enchantée - Ohmyfood</title>
@@ -29,7 +29,7 @@
         <main>
             <section class="page__restaurant">
                 <div class="page__restaurant--img">
-                    <img src="images et textes/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du plat, du restaurant la note enchantés">
+                    <img src="Assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du plat, du restaurant la note enchantés">
                 </div>
                 <div class="slight">
                     <div class="slight__heading">
