--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/e9ad2cc302.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/logo/omf-favicon.png">
     <!-- Style -->
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="Style/Style.css">
     <title>Accueil - Ohmyfood</title>
 </head>
 <body class="body">
